Crash When Removing Multi-Res Modifier from Sculpt Object #58310

Closed
opened 2018-11-30 15:04:11 +01:00 by Ever Hobbes · 7 comments

System Information
Operating system: Win 10 64
Graphics card: GTX 1070

Blender Version
Broken: 2.80 - 2018-11-30 00.46

Short description of error
Blender crashes out when removing/deleting the Multi-Res modifier from an object while in sculpt mode.

Exact steps for others to reproduce the error

  • Open default file.
  • Go to Sculpting Workspace.
  • Add Multi-Res modifier to default cube.
  • Subdivide at least once using the modifier
  • Sculpt on the object at least once with any sculpting tool.
  • Delete the Multi-Res modifier (hit X on the modifier)

Blender crashes.

**System Information** Operating system: Win 10 64 Graphics card: GTX 1070 **Blender Version** Broken: 2.80 - 2018-11-30 00.46 **Short description of error** Blender crashes out when removing/deleting the Multi-Res modifier from an object while in sculpt mode. **Exact steps for others to reproduce the error** - Open default file. - Go to Sculpting Workspace. - Add Multi-Res modifier to default cube. - Subdivide at least once using the modifier - Sculpt on the object at least once with any sculpting tool. - Delete the Multi-Res modifier (hit X on the modifier) # Blender crashes.
Author

Added subscriber: @turquoiserabbit

Added subscriber: @turquoiserabbit
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-11-30 15:22:07 +01:00
Member

Can confirm.

MDisps *mdisps = CustomData_get_layer(&coarse_mesh->ldata, CD_MDISPS);
mdisps is NULL

1  multiresModifier_reshapeFromCCG 			multires_reshape.c 1176 0x2b0b86f      
2  object_update_from_subsurf_ccg			object.c           391  0x2b22bde      
3  BKE_object_free_derived_caches			object.c           459  0x2b22d7d      
4  mesh_build_data					DerivedMesh.c      2007 0x29a526e      
5  makeDerivedMesh					DerivedMesh.c      2120 0x29a55e1      
6  BKE_object_handle_data_update			object_update.c    205  0x2b3621f      
7  BKE_object_eval_uber_data				object_update.c    348  0x2b36922                                                                                                                                                                                                                            

@Sergey: mind checking on this one?

Can confirm. MDisps *mdisps = CustomData_get_layer(&coarse_mesh->ldata, CD_MDISPS); mdisps is NULL ``` 1 multiresModifier_reshapeFromCCG multires_reshape.c 1176 0x2b0b86f 2 object_update_from_subsurf_ccg object.c 391 0x2b22bde 3 BKE_object_free_derived_caches object.c 459 0x2b22d7d 4 mesh_build_data DerivedMesh.c 2007 0x29a526e 5 makeDerivedMesh DerivedMesh.c 2120 0x29a55e1 6 BKE_object_handle_data_update object_update.c 205 0x2b3621f 7 BKE_object_eval_uber_data object_update.c 348 0x2b36922 ``` @Sergey: mind checking on this one?

Added subscriber: @SergeyIvanov

Added subscriber: @SergeyIvanov

This comment was removed by @SergeyIvanov

*This comment was removed by @SergeyIvanov*

This issue was referenced by c8467ccc8d

This issue was referenced by c8467ccc8df3a2d7fc161d227517361647ba83fc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58310
No description provided.