Fix T58310: Crash when removing multires modifier from sculpt object